@@ -15,17 +15,20 @@
  */
 package ghidra.plugins.fsbrowser;
 
+import static ghidra.formats.gfilesystem.fileinfo.FileAttributeType.*;
+import static java.util.Map.*;
+
 import java.awt.Component;
 import java.io.*;
 import java.util.*;
+import java.util.function.Function;
 
 import javax.swing.*;
-import javax.swing.tree.TreePath;
 
 import org.apache.commons.io.FilenameUtils;
 
-import docking.ActionContext;
-import docking.action.*;
+import docking.action.DockingAction;
+import docking.action.builder.ActionBuilder;
 import docking.widgets.OptionDialog;
 import docking.widgets.dialogs.MultiLineMessageDialog;
 import docking.widgets.filechooser.GhidraFileChooser;
@@ -35,8 +38,12 @@ import docking.widgets.tree.GTree;
 import docking.widgets.tree.GTreeNode;
 import ghidra.app.services.ProgramManager;
 import ghidra.app.services.TextEditorService;
+import ghidra.app.util.bin.ByteProvider;
 import ghidra.app.util.opinion.LoaderService;
 import ghidra.formats.gfilesystem.*;
+import ghidra.formats.gfilesystem.crypto.CachedPasswordProvider;
+import ghidra.formats.gfilesystem.crypto.CryptoProviders;
+import ghidra.formats.gfilesystem.fileinfo.*;
 import ghidra.framework.main.AppInfo;
 import ghidra.framework.model.DomainFile;
 import ghidra.framework.plugintool.PluginTool;
@@ -45,12 +52,11 @@ import ghidra.plugin.importer.ProgramMappingService;
 import ghidra.plugins.fsbrowser.tasks.GFileSystemExtractAllTask;
 import ghidra.plugins.importer.batch.BatchImportDialog;
 import ghidra.program.model.listing.Program;
-import ghidra.util.Msg;
-import ghidra.util.SystemUtilities;
+import ghidra.util.*;
 import ghidra.util.exception.CancelledException;
+import ghidra.util.exception.CryptoException;
 import ghidra.util.task.TaskLauncher;
 import ghidra.util.task.TaskMonitor;
-import utilities.util.FileUtilities;
 
 /**
  * Handles the menu actions for the {@link FileSystemBrowserComponentProvider}.
@@ -78,6 +84,7 @@ class FSBActionManager {
 	DockingAction actionCollapse;
 	DockingAction actionImportBatch;
 	DockingAction actionCloseFileSystem;
+	DockingAction actionClearCachedPasswords;
 	/* end package visibility */
 
 	protected FileSystemBrowserPlugin plugin;
@@ -91,6 +98,7 @@ class FSBActionManager {
 	private GhidraFileChooser chooserExportAll;
 
 	private List<DockingAction> actions = new ArrayList<>();
+	private FileSystemService fsService = FileSystemService.getInstance();
 
 	FSBActionManager(FileSystemBrowserPlugin plugin, FileSystemBrowserComponentProvider provider,
 			TextEditorService textEditorService, GTree gTree) {
@@ -109,11 +117,11 @@ class FSBActionManager {
 
 	private void createActions() {
 		actions.add((actionCloseFileSystem = createCloseAction()));
-		actions.add((actionOpenPrograms = createOpenAllProgramsAction()));
+		actions.add((actionOpenPrograms = createOpenProgramsAction()));
 		actions.add((actionImport = createImportAction()));
 		actions.add((actionImportBatch = createBatchImportAction()));
-		actions.add((actionOpenFileSystemNewWindow = createOpenFileSystemActionNewWindow()));
-		actions.add((actionOpenFileSystemNested = createOpenNestedFileSystemAction()));
+		actions.add((actionOpenFileSystemNewWindow = createOpenFileSystemNewWindowAction()));
+		actions.add((actionOpenFileSystemNested = createOpenFileSystemNestedAction()));
 		actions.add((actionOpenFileSystemChooser = createOpenNewFileSystemAction()));
 		actions.add((actionExpand = createExpandAllAction()));
 		actions.add((actionCollapse = createCollapseAllAction()));
@@ -125,6 +133,8 @@ class FSBActionManager {
 		actions.add(
 			(actionShowSupportedFileSystemsAndLoaders = createSupportedFileSystemsAction()));
 		actions.add((actionListMountedFileSystems = createListMountedFilesystemsAction()));
+		actions.add((actionClearCachedPasswords = createClearCachedPasswordsAction()));
+		actions.add(createRefreshAction());
 	}
 
 	private void removeActions() {
@@ -143,178 +153,18 @@ class FSBActionManager {
 		removeActions();
 	}
 
-	private List<FSRL> getLoadableFSRLsFromContext(ActionContext context) {
-		Object contextObject = context.getContextObject();
-		if (contextObject instanceof FSBNode) {
-			contextObject = new FSBNode[] { (FSBNode) contextObject };
-		}
-		if (!(contextObject instanceof FSBNode[])) {
-			return Collections.emptyList();
-		}
-
-		List<FSRL> fsrls = new ArrayList<>();
-		for (FSBNode node : (FSBNode[]) contextObject) {
-			FSRL fsrl = node.getFSRL();
-
-			FSRL validated = vaildateFsrl(fsrl, node);
-			if (validated != null) {
-				fsrls.add(validated);
-				continue;
-			}
-			else if (node instanceof FSBRootNode && fsrl.getFS().hasContainer()) {
-				// 'convert' a file system root node back into its container file
-				fsrls.add(fsrl.getFS().getContainer());
-			}
-			else if (node instanceof FSBFileNode) {
-				fsrls.add(fsrl);
-			}
-		}
-		return fsrls;
-	}
-
-	private FSRL vaildateFsrl(FSRL fsrl, FSBNode node) {
-		if ((node instanceof FSBDirNode) || (node instanceof FSBRootNode)) {
-			FSBRootNode rootNode = FSBUtils.getNodesRoot(node);
-			GFileSystem fs = rootNode.getFSRef().getFilesystem();
-			if (fs instanceof GFileSystemProgramProvider) {
-				GFile gfile;
-				try {
-					gfile = fs.lookup(node.getFSRL().getPath());
-					if (gfile != null &&
-						((GFileSystemProgramProvider) fs).canProvideProgram(gfile)) {
-						return fsrl;
-					}
-				}
-				catch (IOException e) {
-					// ignore error and return null
-				}
-			}
-		}
-
-		return null;
-	}
-
-	private FSRL getLoadableFSRLFromContext(ActionContext context) {
-		if (context == null || !(context.getContextObject() instanceof FSBNode)) {
-			return null;
-		}
-
-		FSBNode node = (FSBNode) context.getContextObject();
-		FSRL fsrl = node.getFSRL();
-		if ((node instanceof FSBDirNode) || (node instanceof FSBRootNode)) {
-			FSBRootNode rootNode = FSBUtils.getNodesRoot(node);
-			GFileSystem fs = rootNode.getFSRef().getFilesystem();
-			if (fs instanceof GFileSystemProgramProvider) {
-				GFile gfile;
-				try {
-					gfile = fs.lookup(node.getFSRL().getPath());
-					if (gfile != null &&
-						((GFileSystemProgramProvider) fs).canProvideProgram(gfile)) {
-						return fsrl;
-					}
-				}
-				catch (IOException e) {
-					// ignore error and fall thru to normal file handling
-				}
-			}
-		}
-		if (node instanceof FSBRootNode && fsrl.getFS().hasContainer()) {
-			// 'convert' a file system root node back into its container file
-			return fsrl.getFS().getContainer();
-		}
-		return (node instanceof FSBFileNode) ? fsrl : null;
-	}
-
-	/*
-	 * Transforms the GTree path specified by the context parameter into a
-	 * folder-like path, suitable for use in a filepath.
-	 */
-	private String getFormattedTreePath(ActionContext context) {
-		if (context != null && context.getContextObject() instanceof FSBNode) {
-			TreePath treePath = ((FSBNode) context.getContextObject()).getTreePath();
-			StringBuilder path = new StringBuilder();
-			for (Object pathElement : treePath.getPath()) {
-				if (pathElement instanceof FSBNode) {
-					FSBNode node = (FSBNode) pathElement;
-					FSRL fsrl = node.getFSRL();
-					if (path.length() != 0) {
-						path.append("/");
-					}
-					String s;
-					if (fsrl instanceof FSRLRoot) {
-						s = fsrl.getFS().hasContainer() ? fsrl.getFS().getContainer().getName()
-								: "/";
-					}
-					else {
-						s = fsrl.getName();
-					}
-					path.append(s);
-				}
-			}
-
-			return path.toString();
-		}
-
-		return null;
-	}
-
-	private boolean isSelectedContextAllDirs(ActionContext context) {
-		Object contextObject = context.getContextObject();
-		if (contextObject instanceof FSBNode[]) {
-			for (FSBNode node : (FSBNode[]) context.getContextObject()) {
-				boolean isDir = (node instanceof FSBDirNode) || (node instanceof FSBRootNode);
-				if (!isDir) {
-					return false;
-				}
-			}
-			return true;
-		}
-		return (contextObject instanceof FSBDirNode) || (contextObject instanceof FSBRootNode);
-	}
-
-	private List<FSRL> getFSRLsFromNodes(FSBNode[] nodes, boolean dirsOk) {
-		List<FSRL> fsrls = new ArrayList<>();
-		for (FSBNode node : nodes) {
-			FSRL fsrl = node.getFSRL();
-			if (!dirsOk && node instanceof FSBRootNode && fsrl.getFS().hasContainer()) {
-				// 'convert' a file system root node back into its container file node
-				fsrl = fsrl.getFS().getContainer();
-			}
-			else {
-				boolean isDir = (node instanceof FSBDirNode) || (node instanceof FSBRootNode);
-				if (isDir && !dirsOk) {
-					continue;
-				}
-			}
-			fsrls.add(fsrl);
-		}
-		return fsrls;
-	}
-
-	private List<FSRL> getFSRLsFromContext(ActionContext context, boolean dirsOk) {
-		Object contextObject = context.getContextObject();
-		if (contextObject instanceof FSBNode) {
-			contextObject = new FSBNode[] { (FSBNode) contextObject };
-		}
-		if (contextObject instanceof FSBNode[]) {
-			return getFSRLsFromNodes((FSBNode[]) contextObject, dirsOk);
-		}
-		return Collections.emptyList();
-	}
-
-	private List<FSRL> getFileFSRLsFromContext(ActionContext context) {
-		return getFSRLsFromContext(context, false);
-	}
-
-	private void openProgramFromFile(FSRL file, String suggestedDestinationPath) {
+	private void openProgramFromFile(FSRL file, FSBNode node, String suggestedDestinationPath) {
 		ProgramManager pm = FSBUtils.getProgramManager(plugin.getTool(), false);
 		if (pm == null) {
 			return;
 		}
 
-		TaskLauncher.launchModal("Open Programs", monitor -> {
+		gTree.runTask(monitor -> {
 			boolean success = doOpenProgramFromFile(file, suggestedDestinationPath, pm, monitor);
 			if (!success) {
+				if (!ensureFileAccessable(file, node, monitor)) {
+					return;
+				}
 				ImporterUtilities.showImportDialog(plugin.getTool(), pm, file, null,
 					suggestedDestinationPath, monitor);
 			}
@@ -328,13 +178,13 @@ class FSBActionManager {
 		Program program = ProgramMappingService.findMatchingProgramOpenIfNeeded(fsrl, consumer,
 			programManager, ProgramManager.OPEN_CURRENT);
 
-		if (program == null) {
-			return searchProjectForMatchingFileOrFail(fsrl, suggestedDestinationPath,
-				programManager, monitor);
+		if (program != null) {
+			program.release(consumer);
+			return true;
 		}
 
-		program.release(consumer);
-		return true;
+		return searchProjectForMatchingFileOrFail(fsrl, suggestedDestinationPath, programManager,
+			monitor);
 	}
 
 	private boolean searchProjectForMatchingFileOrFail(FSRL fsrl, String suggestedDestinationPath,
@@ -344,8 +194,8 @@ class FSBActionManager {
 				"Search entire Project for matching program? (WARNING, could take large amount of time)") == OptionDialog.YES_OPTION;
 
 		Map<FSRL, DomainFile> matchedFSRLs = doSearch
-				? ProgramMappingService.searchProjectForMatchingFiles(Arrays.asList(fsrl), monitor)
-				: Collections.emptyMap();
+				? ProgramMappingService.searchProjectForMatchingFiles(List.of(fsrl), monitor)
+				: Map.of();
 
 		DomainFile domainFile = matchedFSRLs.get(fsrl);
 		if (domainFile != null) {
@@ -372,7 +222,7 @@ class FSBActionManager {
 			return;
 		}
 
-		TaskLauncher.launchModal("Open Programs", monitor -> {
+		gTree.runTask(monitor -> {
 			List<FSRL> unmatchedFiles = doOpenProgramsFromFiles(files, pm, monitor);
 
 			if (unmatchedFiles.size() == 1) {
@@ -435,9 +285,9 @@ class FSBActionManager {
 				"Search entire Project for matching programs? " +
 					"(WARNING, could take large amount of time)") == OptionDialog.YES_OPTION;
 
-		Map<FSRL, DomainFile> matchedFSRLs =
-			doSearch ? ProgramMappingService.searchProjectForMatchingFiles(fsrlList, monitor)
-					: Collections.emptyMap();
+		Map<FSRL, DomainFile> matchedFSRLs = doSearch
+				? ProgramMappingService.searchProjectForMatchingFiles(fsrlList, monitor)
+				: Map.of();
 
 		List<FSRL> unmatchedFSRLs = new ArrayList<>();
 		for (FSRL fsrl : fsrlList) {
@@ -481,57 +331,6 @@ class FSBActionManager {
 	}
 
 	/**
-	 * Shows a dialog with information about the specified file.
-	 *
-	 * @param fsrl {@link FSRL} of the file to display info about.
-	 * @param monitor {@link TaskMonitor} to monitor and update when accessing the filesystems.
-	 */
-	private void showInfoForFile(FSRL fsrl, TaskMonitor monitor) {
-		String title;
-		String info;
-
-		if (fsrl != null) {
-			info = "";
-			title = "Info about " + fsrl.getName();
-			if (fsrl instanceof FSRLRoot && ((FSRLRoot) fsrl).hasContainer()) {
-				FSRL containerFSRL = ((FSRLRoot) fsrl).getContainer();
-				title = containerFSRL.getName();
-				info = getInfoStringFor(containerFSRL, monitor);
-				info += "------------------------------------\n";
-			}
-			info += getInfoStringFor(fsrl, monitor);
-		}
-		else {
-			title = "Missing File";
-			info = "Unable to retrieve information";
-		}
-
-		MultiLineMessageDialog.showMessageDialog(plugin.getTool().getActiveWindow(), title, null,
-			info, MultiLineMessageDialog.INFORMATION_MESSAGE);
-
-	}
-
-	private String getInfoStringFor(FSRL fsrl, TaskMonitor monitor) {
-		try (RefdFile refdFile = FileSystemService.getInstance().getRefdFile(fsrl, monitor)) {
-			GFileSystem fs = refdFile.fsRef.getFilesystem();
-			String result = "File system: " + fs.getDescription() + "\n";
-			result += "FSRL: " + fsrl + "\n";
-			DomainFile associatedDomainFile = ProgramMappingService.getCachedDomainFileFor(fsrl);
-			if (associatedDomainFile != null) {
-				result += "Project file: " + associatedDomainFile.getPathname() + "\n";
-			}
-			String nodeInfo = fs.getInfo(refdFile.file, monitor);
-			if (nodeInfo != null) {
-				result += nodeInfo;
-			}
-			return result;
-		}
-		catch (IOException | CancelledException e) {
-			return "Error retrieving information: " + e.getMessage() + "\n";
-		}
-	}
-
-	/**
 	 * Shows a list of supported file system types and loaders.
 	 */
 	private void showSupportedFileSystems() {
@@ -540,7 +339,7 @@ class FSBActionManager {
 		sb.append(
 			"<html><table><tr><td>Supported File Systems</td><td>Supported Loaders</td></tr>\n");
 		sb.append("<tr valign='top'><td><ul>");
-		for (String fileSystemName : FileSystemService.getInstance().getAllFilesystemNames()) {
+		for (String fileSystemName : fsService.getAllFilesystemNames()) {
 			sb.append("<li>" + fileSystemName + "\n");
 		}
 
@@ -559,671 +358,742 @@ class FSBActionManager {
 	// DockingActions
 	//----------------------------------------------------------------------------------
 	private DockingAction createSupportedFileSystemsAction() {
-
-		FSBAction action = new FSBAction("Display Supported File Systems and Loaders", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				showSupportedFileSystems();
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				return true;
-			}
-		};
-		action.setToolBarData(new ToolBarData(ImageManager.INFO));
-		action.setDescription(action.getMenuText());
-		action.setEnabled(true);
-		return action;
+		return new ActionBuilder("FSB Display Supported File Systems and Loaders", plugin.getName())
+				.description("Display Supported File Systems and Loaders")
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> true)
+				.toolBarIcon(ImageManager.INFO)
+				.onAction(ac -> showSupportedFileSystems())
+				.build();
 	}
 
 	private DockingAction createExportAction() {
-
-		FSBAction action = new FSBAction("Export", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				FSRL fsrl = FSBUtils.getFileFSRLFromContext(context);
-				if (fsrl != null) {
-					File selectedFile =
-						new File(chooserExport.getCurrentDirectory(), fsrl.getName());
-					chooserExport.setFileSelectionMode(GhidraFileChooserMode.FILES_ONLY);
-					chooserExport.setTitle("Select Where To Export File");
-					chooserExport.setApproveButtonText(getMenuText());
-					chooserExport.setSelectedFile(selectedFile);
-					File outputFile = chooserExport.getSelectedFile();
-					if (outputFile == null) {
-						return;
-					}
-					if (outputFile.exists()) {
-						int answer = OptionDialog.showYesNoDialog(provider.getComponent(),
-							"Confirm Overwrite", outputFile.getAbsolutePath() + "\n" +
-								"The file already exists." + "\n" + "Do you want to overwrite it?");
-						if (answer == OptionDialog.NO_OPTION) {
+		return new ActionBuilder("FSB Export", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && ac.getFileFSRL() != null)
+				.popupMenuIcon(ImageManager.EXTRACT)
+				.popupMenuPath("Export...")
+				.popupMenuGroup("F", "B")
+				.onAction(
+					ac -> {
+						FSRL fsrl = ac.getFileFSRL();
+						if (fsrl == null) {
 							return;
 						}
-					}
-					gTree.runTask(monitor -> doExtractFile(fsrl, outputFile, monitor));
-				}
-			}
-
-			private void doExtractFile(FSRL fsrl, File outputFile, TaskMonitor monitor) {
-				monitor.setMessage("Exporting...");
-				try {
-					File cacheFile = FileSystemService.getInstance().getFile(fsrl, monitor);
-					long totalBytesCopied =
-						FileUtilities.copyFile(cacheFile, outputFile, false, monitor);
-					Msg.info(this, "Exported " + fsrl.getName() + " to " + outputFile + ", " +
-						totalBytesCopied + " bytes copied.");
-				}
-				catch (IOException | CancelledException | UnsupportedOperationException e) {
-					FSUtilities.displayException(this, plugin.getTool().getActiveWindow(),
-						"Error Exporting File", e.getMessage(), e);
-				}
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				// allow files or the root node of nested filesystems
-				FSRL fsrl = FSBUtils.getFileFSRLFromContext(context);
-				return !gTree.isBusy() && (fsrl != null);
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-		};
-		action.setPopupMenuData(new MenuData(new String[] { action.getMenuText() + "..." },
-			ImageManager.EXTRACT, "F", MenuData.NO_MNEMONIC, "B"));
-		action.setEnabled(true);
-		return action;
+						File selectedFile =
+							new File(chooserExport.getCurrentDirectory(), fsrl.getName());
+						chooserExport.setFileSelectionMode(GhidraFileChooserMode.FILES_ONLY);
+						chooserExport.setTitle("Select Where To Export File");
+						chooserExport.setApproveButtonText("Export");
+						chooserExport.setSelectedFile(selectedFile);
+						File outputFile = chooserExport.getSelectedFile();
+						if (outputFile == null) {
+							return;
+						}
+						if (outputFile.exists()) {
+							int answer = OptionDialog.showYesNoDialog(provider.getComponent(),
+								"Confirm Overwrite", outputFile.getAbsolutePath() + "\n" +
+									"The file already exists.\n" +
+									"Do you want to overwrite it?");
+							if (answer == OptionDialog.NO_OPTION) {
+								return;
+							}
+						}
+						gTree.runTask(monitor -> doExtractFile(fsrl, outputFile,
+							ac.getSelectedNode(), monitor));
+					})
+				.build();
 	}
 
 	private DockingAction createExportAllAction() {
+		return new ActionBuilder("FSB Export All", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && ac.isSelectedAllDirs())
+				.popupMenuIcon(ImageManager.EXTRACT)
+				.popupMenuPath("Export All...")
+				.popupMenuGroup("F", "C")
+				.onAction(
+					ac -> {
+						FSRL fsrl = ac.getFSRL(true);
+						if (fsrl == null) {
+							return;
+						}
+						if (fsrl instanceof FSRLRoot) {
+							fsrl = fsrl.appendPath("/");
+						}
 
-		FSBAction action = new FSBAction("Export All", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				FSRL fsrl = FSBUtils.getFSRLFromContext(context, true);
-				if (fsrl == null) {
-					return;
-				}
-				if (fsrl instanceof FSRLRoot) {
-					fsrl = fsrl.appendPath("/");
-				}
+						chooserExportAll
+								.setFileSelectionMode(GhidraFileChooserMode.DIRECTORIES_ONLY);
+						chooserExportAll.setTitle("Select Export Directory");
+						chooserExportAll.setApproveButtonText("Export All");
+						chooserExportAll.setSelectedFile(null);
+						File outputFile = chooserExportAll.getSelectedFile();
+						if (outputFile == null) {
+							return;
+						}
 
-				chooserExportAll.setFileSelectionMode(GhidraFileChooserMode.DIRECTORIES_ONLY);
-				chooserExportAll.setTitle("Select Export Directory");
-				chooserExportAll.setApproveButtonText(getMenuText());
-				chooserExportAll.setSelectedFile(null);
-				File outputFile = chooserExportAll.getSelectedFile();
-				if (outputFile == null) {
-					return;
-				}
-
-				if (!outputFile.isDirectory()) {
-					Msg.showInfo(getClass(), provider.getComponent(), getMenuText(),
-						"Selected file is not a directory.");
-					return;
-				}
-				Component parentComp = plugin.getTool().getActiveWindow();
-				TaskLauncher.launch(new GFileSystemExtractAllTask(fsrl, outputFile, parentComp));
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				FSRL fsrl = FSBUtils.getFSRLFromContext(context, true);
-				return !gTree.isBusy() && (fsrl != null) && isSelectedContextAllDirs(context);
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-		};
-		action.setPopupMenuData(new MenuData(new String[] { action.getMenuText() + "..." },
-			ImageManager.EXTRACT, "F", MenuData.NO_MNEMONIC, "C"));
-		action.setEnabled(false);
-		return action;
+						if (!outputFile.isDirectory()) {
+							Msg.showInfo(this, provider.getComponent(), "Export All",
+								"Selected file is not a directory.");
+							return;
+						}
+						Component parentComp = plugin.getTool().getActiveWindow();
+						TaskLauncher.launch(
+							new GFileSystemExtractAllTask(fsrl, outputFile, parentComp));
+					})
+				.build();
 	}
 
 	private DockingAction createViewAsImageAction() {
-
-		FSBAction action = new FSBAction("View As Image", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				FSRL fsrl = FSBUtils.getFSRLFromContext(context, false);
-				if (fsrl != null) {
-					gTree.runTask(monitor -> doViewAsImage(fsrl, monitor));
-				}
-			}
-
-			private void doViewAsImage(FSRL fsrl, TaskMonitor monitor) {
-				Component parent = plugin.getTool().getActiveWindow();
-				try (RefdFile refdFile =
-					FileSystemService.getInstance().getRefdFile(fsrl, monitor)) {
-					Icon icon = GIconProvider.getIconForFile(refdFile.file, monitor);
-					if (icon == null) {
-						Msg.showError(this, parent, "Unable To View Image",
-							"Unable to view " + fsrl.getName() + " as an image.");
-					}
-					else {
-						SystemUtilities.runSwingLater(() -> {
-							JLabel label = new GIconLabel(icon);
-							JOptionPane.showMessageDialog(null, label,
-								"Image Viewer: " + fsrl.getName(), JOptionPane.INFORMATION_MESSAGE);
-						});
-					}
-				}
-				catch (IOException | CancelledException e) {
-					FSUtilities.displayException(this, parent, "Error Viewing Image File",
-						e.getMessage(), e);
-				}
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				FSRL fsrl = FSBUtils.getFSRLFromContext(context, false);
-				return !gTree.isBusy() && (fsrl != null);
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-		};
-		action.setPopupMenuData(
-			new MenuData(new String[] { action.getMenuText() }, ImageManager.VIEW_AS_IMAGE, "G"));
-		action.setEnabled(true);
-		return action;
+		return new ActionBuilder("FSB View As Image", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && ac.getFileFSRL() != null)
+				.popupMenuIcon(ImageManager.VIEW_AS_IMAGE)
+				.popupMenuPath("View As Image")
+				.popupMenuGroup("G")
+				.onAction(
+					ac -> {
+						FSRL fsrl = ac.getFileFSRL();
+						if (fsrl != null) {
+							gTree.runTask(
+								monitor -> doViewAsImage(fsrl, ac.getSelectedNode(), monitor));
+						}
+					})
+				.build();
 	}
 
 	private DockingAction createViewAsTextAction() {
-
-		FSBAction action = new FSBAction("View As Text", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				FSRL fsrl = FSBUtils.getFSRLFromContext(context, false);
-				if (fsrl != null) {
-					gTree.runTask(monitor -> doViewAsText(fsrl, monitor));
-				}
-			}
-
-			private void doViewAsText(FSRL fsrl, TaskMonitor monitor) {
-				Component parent = plugin.getTool().getActiveWindow();
-				try {
-					File file = FileSystemService.getInstance().getFile(fsrl, monitor);
-					if (file.length() == -1 || file.length() > MAX_TEXT_FILE_LEN) {
-						Msg.showInfo(this, parent, "View As Text Failed",
-							"File too large to view as text inside Ghidra. " +
-								"Please use the \"EXPORT\" action.");
-						return;
-					}
-					if (file.length() == 0) {
-						Msg.showInfo(this, parent, "View As Text Failed",
-							"File " + fsrl.getName() + " is empty (0 bytes).");
-						return;
-					}
-					try {
-						InputStream inputStream = new FileInputStream(file);
-						// textEditorService closes the inputStream, and must be
-						// called on the swing thread or you get concurrentmodification
-						// exceptions.
-						SystemUtilities.runSwingLater(
-							() -> textEditorService.edit(fsrl.getName(), inputStream));
-					}
-					catch (IOException e) {
-						Msg.showError(this, parent, "View As Text Failed",
-							"Error when trying to view text file " + fsrl.getName(), e);
-					}
-				}
-				catch (IOException | CancelledException e) {
-					FSUtilities.displayException(this, parent, "Error viewing text file",
-						e.getMessage(), e);
-				}
-
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				FSRL fsrl = FSBUtils.getFSRLFromContext(context, false);
-				return !gTree.isBusy() && (fsrl != null);
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-		};
-		action.setPopupMenuData(
-			new MenuData(new String[] { action.getMenuText() }, ImageManager.VIEW_AS_TEXT, "G"));
-		action.setEnabled(true);
-		return action;
+		return new ActionBuilder("FSB View As Text", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && ac.getFileFSRL() != null)
+				.popupMenuIcon(ImageManager.VIEW_AS_TEXT)
+				.popupMenuPath("View As Text")
+				.popupMenuGroup("G")
+				.onAction(
+					ac -> {
+						FSRL fsrl = ac.getFileFSRL();
+						if (fsrl != null) {
+							gTree.runTask(
+								monitor -> doViewAsText(fsrl, ac.getSelectedNode(), monitor));
+						}
+					})
+				.build();
 	}
 
 	private DockingAction createListMountedFilesystemsAction() {
+		return new ActionBuilder("FSB List Mounted Filesystems", plugin.getName())
+				.description("List Mounted Filesystems")
+				.withContext(FSBActionContext.class)
+				.enabledWhen(FSBActionContext::notBusy)
+				.toolBarIcon(ImageManager.LIST_MOUNTED)
+				.toolBarGroup("ZZZZ")
+				.popupMenuIcon(ImageManager.LIST_MOUNTED)
+				.popupMenuPath("List Mounted Filesystems")
+				.popupMenuGroup("L")
+				.onAction(ac -> {
+					FSRLRoot fsFSRL = SelectFromListDialog.selectFromList(
+						fsService.getMountedFilesystems(),
+						"Select filesystem",
+						"Choose filesystem to view", f -> f.toPrettyString());
 
-		FSBAction action = new FSBAction("List Mounted Filesystems", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				FSRLRoot fsFSRL = SelectFromListDialog.selectFromList(
-					FileSystemService.getInstance().getMountedFilesystems(), "Select filesystem",
-					"Choose filesystem to view", f -> f.toPrettyString());
-
-				FileSystemRef fsRef;
-				if (fsFSRL != null && (fsRef =
-					FileSystemService.getInstance().getMountedFilesystem(fsFSRL)) != null) {
-					plugin.createNewFileSystemBrowser(fsRef, true);
-				}
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				return !gTree.isBusy();
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-		};
-		action.setPopupMenuData(
-			new MenuData(new String[] { action.getMenuText() }, ImageManager.LIST_MOUNTED, "L"));
-		action.setToolBarData(new ToolBarData(ImageManager.LIST_MOUNTED, "ZZZZ"));
-		action.setDescription(action.getMenuText());
-		action.setEnabled(true);
-		return action;
+					FileSystemRef fsRef;
+					if (fsFSRL != null &&
+						(fsRef = fsService.getMountedFilesystem(fsFSRL)) != null) {
+						plugin.createNewFileSystemBrowser(fsRef, true);
+					}
+				})
+				.build();
 	}
 
 	private DockingAction createExpandAllAction() {
-
-		FSBAction action = new FSBAction("Expand All", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				if (context.getContextObject() instanceof GTreeNode) {
-					GTreeNode node = (GTreeNode) context.getContextObject();
-					gTree.expandTree(node);
-				}
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				Object co = context.getContextObject();
-				return !gTree.isBusy() &&
-					((co instanceof FSBRootNode) || (co instanceof FSBDirNode));
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-		};
-		action.setPopupMenuData(new MenuData(new String[] { action.getMenuText() },
-			ImageManager.EXPAND_ALL, "B", MenuData.NO_MNEMONIC, "A"));
-		action.setEnabled(true);
-		return action;
+		return new ActionBuilder("FSB Expand All", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(
+					ac -> ac.notBusy() && ac.getSelectedCount() == 1 && ac.isSelectedAllDirs())
+				.popupMenuIcon(ImageManager.EXPAND_ALL)
+				.popupMenuPath("Expand All")
+				.popupMenuGroup("B", "A")
+				.onAction(ac -> {
+					FSBNode selectedNode = ac.getSelectedNode();
+					if (selectedNode != null) {
+						gTree.expandTree(selectedNode);
+					}
+				})
+				.build();
 	}
 
 	private DockingAction createCollapseAllAction() {
-
-		FSBAction action = new FSBAction("Collapse All", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				if (context.getContextObject() instanceof GTreeNode) {
-					GTreeNode node = (GTreeNode) context.getContextObject();
-					gTree.collapseAll(node);
-				}
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				Object co = context.getContextObject();
-				return !gTree.isBusy() &&
-					((co instanceof FSBRootNode) || (co instanceof FSBDirNode));
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-		};
-		action.setPopupMenuData(new MenuData(new String[] { action.getMenuText() },
-			ImageManager.COLLAPSE_ALL, "B", MenuData.NO_MNEMONIC, "B"));
-		action.setEnabled(true);
-		return action;
+		return new ActionBuilder("FSB Collapse All", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(
+					ac -> ac.notBusy() && ac.getSelectedCount() == 1 && ac.isSelectedAllDirs())
+				.popupMenuIcon(ImageManager.COLLAPSE_ALL)
+				.popupMenuPath("Collapse All")
+				.popupMenuGroup("B", "B")
+				.onAction(ac -> {
+					FSBNode selectedNode = ac.getSelectedNode();
+					if (selectedNode != null) {
+						gTree.collapseAll(selectedNode);
+					}
+				})
+				.build();
 	}
 
 	private DockingAction createGetInfoAction() {
-
-		FSBAction action = new FSBAction("Get Info", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				FSRL fsrl = FSBUtils.getFSRLFromContext(context, true);
-				gTree.runTask(monitor -> showInfoForFile(fsrl, monitor));
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				FSRL fsrl = FSBUtils.getFSRLFromContext(context, true);
-				return !gTree.isBusy() && fsrl != null;
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-		};
-		action.setPopupMenuData(
-			new MenuData(new String[] { action.getMenuText() }, ImageManager.INFO, "A"));
-		action.setEnabled(true);
-		return action;
+		return new ActionBuilder("Get Info", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && ac.getFSRL(true) != null)
+				.popupMenuPath("Get Info")
+				.popupMenuGroup("A")
+				.popupMenuIcon(ImageManager.INFO)
+				.description("Show information about a file")
+				.onAction(
+					ac -> {
+						FSRL fsrl = ac.getFSRL(true);
+						gTree.runTask(monitor -> showInfoForFile(fsrl, monitor));
+					})
+				.build();
 	}
 
-	private DockingAction createOpenFileSystemActionNewWindow() {
-		FSBAction action = new FSBAction("Open File System In New Window",
-			"Open File System in new window", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
+	private DockingAction createOpenFileSystemNewWindowAction() {
+		return new ActionBuilder("FSB Open File System In New Window", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && ac.getSelectedNode() instanceof FSBFileNode)
+				.popupMenuIcon(ImageManager.OPEN_FILE_SYSTEM)
+				.popupMenuPath("Open File System in new window")
+				.popupMenuGroup("C")
+				.onAction(
+					ac -> {
+						if (!(ac.getSelectedNode() instanceof FSBFileNode) ||
+							ac.getSelectedNode().getFSRL() == null) {
+							return;
+						}
+						FSBFileNode selectedNode = (FSBFileNode) ac.getSelectedNode();
+						FSRL containerFSRL = selectedNode.getFSRL();
+						if (containerFSRL != null) {
+							gTree.runTask(monitor -> {
+								doOpenFileSystem(containerFSRL, selectedNode, false, monitor);
+							});
+						}
+					})
+				.build();
+	}
 
-				FSRL containerFSRL = FSBUtils.getFileFSRLFromContext(context);
-				if (containerFSRL != null) {
-					gTree.runTask(monitor -> {
-						doOpenFileSystem(containerFSRL, monitor);
-					});
-				}
-			}
-
-			/*
-			 * run on gTree task thread
-			 */
-			private void doOpenFileSystem(FSRL containerFSRL, TaskMonitor monitor) {
-				try {
-					monitor.setMessage("Probing " + containerFSRL.getName() + " for filesystems");
-					FileSystemRef ref = FileSystemService.getInstance()
-							.probeFileForFilesystem(
-								containerFSRL, monitor, FileSystemProbeConflictResolver.GUI_PICKER);
-					if (ref == null) {
-						Msg.showWarn(this, plugin.getTool().getActiveWindow(), "Open Filesystem",
-							"No filesystem provider for " + containerFSRL.getName());
+	private DockingAction createOpenFileSystemNestedAction() {
+		return new ActionBuilder("FSB Open File System Nested", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && ac.getSelectedNode() instanceof FSBFileNode)
+				.popupMenuIcon(ImageManager.OPEN_FILE_SYSTEM)
+				.popupMenuPath("Open File System")
+				.popupMenuGroup("C")
+				.onAction(ac -> {
+					if (!(ac.getSelectedNode() instanceof FSBFileNode) ||
+						ac.getSelectedNode().getFSRL() == null) {
 						return;
 					}
-
-					SystemUtilities.runSwingLater(() -> {
-						plugin.createNewFileSystemBrowser(ref, true);
-					});
-				}
-				catch (IOException | CancelledException e) {
-					FSUtilities.displayException(this, plugin.getTool().getActiveWindow(),
-						"Open Filesystem",
-						"Error opening filesystem for " + containerFSRL.getName(), e);
-				}
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				FSRL containerFSRL = FSBUtils.getFSRLFromContext(context, false);
-				return !gTree.isBusy() && (containerFSRL != null);
-			}
-		};
-		action.setPopupMenuData(new MenuData(new String[] { action.getMenuText() },
-			ImageManager.OPEN_FILE_SYSTEM, "C"));
-		action.setEnabled(true);
-		return action;
+					FSBFileNode selectedNode = (FSBFileNode) ac.getSelectedNode();
+					FSRL containerFSRL = selectedNode.getFSRL();
+					if (containerFSRL != null) {
+						gTree.runTask(monitor -> {
+							doOpenFileSystem(containerFSRL, selectedNode, true, monitor);
+						});
+					}
+				})
+				.build();
 	}
 
 	private DockingAction createOpenNewFileSystemAction() {
-		FSBAction action = new FSBAction("Open File System Chooser", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				plugin.openFileSystem();
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return false;
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				return true;
-			}
-		};
-		action.setPopupMenuData(new MenuData(new String[] { action.getMenuText() },
-			ImageManager.OPEN_FILE_SYSTEM, "C"));
-		action.setDescription(action.getMenuText());
-		action.setToolBarData(new ToolBarData(ImageManager.OPEN_FILE_SYSTEM, "B"));
-		action.setEnabled(true);
-		return action;
+		return new ActionBuilder("FSB Open File System Chooser", plugin.getName())
+				.description("Open File System Chooser")
+				.withContext(FSBActionContext.class)
+				.enabledWhen(FSBActionContext::notBusy)
+				.toolBarIcon(ImageManager.OPEN_FILE_SYSTEM)
+				.toolBarGroup("B")
+				.onAction(ac -> plugin.openFileSystem())
+				.build();
 	}
 
-	private DockingAction createOpenAllProgramsAction() {
-
-		FSBAction action = new FSBAction("Open Programs", "Open Program(s)", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				if (!plugin.hasProgramManager()) {
-					Msg.showInfo(this, plugin.getTool().getActiveWindow(), "Open Program Error",
-						"There is no tool currently open that can be used to show a program.");
-					return;
-				}
-				List<FSRL> files = getLoadableFSRLsFromContext(context);
-				if (files.size() == 1) {
-					String treePath =
-						FilenameUtils.getFullPathNoEndSeparator(getFormattedTreePath(context));
-					openProgramFromFile(files.get(0), treePath);
-				}
-				else if (files.size() > 1) {
-					openProgramsFromFiles(files);
-				}
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				return !gTree.isBusy() && !getLoadableFSRLsFromContext(context).isEmpty();
-			}
-		};
-		action.setPopupMenuData(new MenuData(new String[] { action.getMenuText() },
-			ImageManager.OPEN_ALL, "D", MenuData.NO_MNEMONIC, "B"));
-		action.setEnabled(plugin.hasProgramManager());
-		return action;
+	private DockingAction createOpenProgramsAction() {
+		return new ActionBuilder("FSB Open Programs", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && plugin.hasProgramManager() &&
+					!ac.getLoadableFSRLs().isEmpty())
+				.popupMenuIcon(ImageManager.OPEN_ALL)
+				.popupMenuPath("Open Program(s)")
+				.popupMenuGroup("D", "B")
+				.onAction(ac -> {
+					if (!plugin.hasProgramManager()) {
+						Msg.showInfo(this, plugin.getTool().getActiveWindow(), "Open Program Error",
+							"There is no tool currently open that can be used to show a program.");
+						return;
+					}
+					List<FSRL> files = ac.getLoadableFSRLs();
+					if (files.size() == 1) {
+						String treePath =
+							FilenameUtils.getFullPathNoEndSeparator(ac.getFormattedTreePath());
+						openProgramFromFile(files.get(0), ac.getSelectedNodes().get(0), treePath);
+					}
+					else if (files.size() > 1) {
+						openProgramsFromFiles(files);
+					}
+				})
+				.build();
 	}
 
 	private DockingAction createCloseAction() {
-		FSBAction action = new FSBAction("Close", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-
-				if (!(context.getContextObject() instanceof FSBRootNode)) {
-					return;
-				}
-				FSBRootNode node = (FSBRootNode) context.getContextObject();
-				if (node.equals(gTree.getModelRoot())) {
-					// Close entire window
-					FileSystemRef fsRef = node.getFSRef();
-					if (fsRef != null && !fsRef.isClosed() &&
-						OptionDialog.showYesNoDialog(provider.getComponent(), "Close File System",
-							"Do you want to close the filesystem browser for " +
-								fsRef.getFilesystem().getName() + "?") == OptionDialog.YES_OPTION) {
-						plugin.removeFileSystemBrowser(fsRef.getFilesystem().getFSRL());
-						this.setEnabled(false);
+		return new ActionBuilder("FSB Close", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && ac.getSelectedNode() instanceof FSBRootNode)
+				.description("Close")
+				.toolBarIcon(ImageManager.CLOSE)
+				.toolBarGroup("ZZZZ")
+				.popupMenuIcon(ImageManager.CLOSE)
+				.popupMenuPath("Close")
+				.popupMenuGroup("ZZZZ")
+				.onAction(ac -> {
+					FSBNode selectedNode = ac.getSelectedNode();
+					if (!(selectedNode instanceof FSBRootNode)) {
+						return;
 					}
-				}
-				else {
-					// Close file system that is nested in the container's tree.
-					gTree.runTask(monitor -> {
-						int indexInParent = node.getIndexInParent();
-						GTreeNode parent = node.getParent();
-						parent.removeNode(node);
-						GTreeNode prevNode = node.getPrevNode();
-						parent.addNode(indexInParent, prevNode);
-						node.dispose();
-					});
-				}
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				return !gTree.isBusy() && (context.getContextObject() instanceof FSBRootNode);
-			}
-		};
-		action.setPopupMenuData(
-			new MenuData(new String[] { action.getMenuText() }, ImageManager.CLOSE, "ZZZZ"));
-		action.setDescription(action.getMenuText());
-		action.setToolBarData(new ToolBarData(ImageManager.CLOSE, "ZZZZ"));
-		action.setEnabled(false);
-		return action;
+					FSBRootNode node = (FSBRootNode) selectedNode;
+					if (node.getParent() == null) {
+						// Close entire window
+						if (OptionDialog.showYesNoDialog(provider.getComponent(),
+							"Close File System",
+							"Do you want to close the filesystem browser for " + node.getName() +
+								"?") == OptionDialog.YES_OPTION) {
+							provider.componentHidden();	// cause component to close itself
+						}
+					}
+					else {
+						// Close file system that is nested in the container's tree and swap
+						// in the saved node that was the original container file
+						gTree.runTask(monitor -> node.swapBackPrevModelNodeAndDispose());
+					}
+				})
+				.build();
 	}
 
 	private DockingAction createImportAction() {
-		FSBAction action = new FSBAction("Import Single", "Import", plugin) {
+		return new ActionBuilder("FSB Import Single", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && ac.getLoadableFSRL() != null)
+				.popupMenuIcon(ImageManager.IMPORT)
+				.popupMenuPath("Import")
+				.popupMenuGroup("F", "A")
+				.onAction(ac -> {
+					FSRL fsrl = ac.getLoadableFSRL();
+					if (fsrl == null) {
+						return;
+					}
 
-			@Override
-			public void actionPerformed(ActionContext context) {
-				FSRL fsrl = getLoadableFSRLFromContext(context);
-				if (fsrl == null) {
-					return;
-				}
+					String treePath = ac.getFormattedTreePath();
+					String suggestedPath =
+						FilenameUtils.getFullPathNoEndSeparator(treePath).replaceAll(":/", "/");
 
-				String treePath = getFormattedTreePath(context);
-				String suggestedPath =
-					FilenameUtils.getFullPathNoEndSeparator(treePath).replaceAll(":/", "/");
+					PluginTool tool = plugin.getTool();
+					ProgramManager pm = FSBUtils.getProgramManager(tool, false);
 
-				PluginTool tool = plugin.getTool();
-				ProgramManager pm = FSBUtils.getProgramManager(tool, false);
-				ImporterUtilities.showImportDialog(tool, pm, fsrl, null, suggestedPath);
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				return !gTree.isBusy() && getLoadableFSRLFromContext(context) != null;
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-		};
-		action.setPopupMenuData(new MenuData(new String[] { action.getMenuText() },
-			ImageManager.IMPORT, "F", MenuData.NO_MNEMONIC, "A"));
-		action.setEnabled(true);
-
-		return action;
+					gTree.runTask(monitor -> {
+						if (!ensureFileAccessable(fsrl, ac.getSelectedNode(), monitor)) {
+							return;
+						}
+						ImporterUtilities.showImportDialog(tool, pm, fsrl, null, suggestedPath,
+							monitor);
+					});
+				})
+				.build();
 	}
 
 	private DockingAction createBatchImportAction() {
-		FSBAction action = new FSBAction("Import Batch", "Batch Import", plugin) {
+		return new ActionBuilder("FSB Import Batch", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && ac.getSelectedCount() > 0)
+				.popupMenuIcon(ImageManager.IMPORT)
+				.popupMenuPath("Batch Import")
+				.popupMenuGroup("F", "B")
+				.onAction(ac -> {
+					// Do some fancy selection logic.
+					// If the user selected a combination of files and folders,
+					// ignore the folders.
+					// If they only selected folders, leave them in the list.
+					List<FSRL> files = ac.getFSRLs(true);
+					if (files.isEmpty()) {
+						return;
+					}
 
-			@Override
-			public void actionPerformed(ActionContext context) {
-				// Do some fancy selection logic.
-				// If the user selected a combination of files and folders,
-				// ignore the folders.
-				// If they only selected folders, leave them in the list.
-				List<FSRL> files = getFSRLsFromContext(context, true);
-				if (files.isEmpty()) {
-					return;
-				}
+					boolean allDirs = ac.isSelectedAllDirs();
+					if (files.size() > 1 && !allDirs) {
+						files = ac.getFileFSRLs();
+					}
 
-				boolean allDirs = isSelectedContextAllDirs(context);
-				if (files.size() > 1 && !allDirs) {
-					files = getFileFSRLsFromContext(context);
-				}
-
-				BatchImportDialog.showAndImport(plugin.getTool(), null, files, null,
-					FSBUtils.getProgramManager(plugin.getTool(), false));
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				return !gTree.isBusy() && !getFSRLsFromContext(context, true).isEmpty();
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-		};
-		action.setPopupMenuData(new MenuData(new String[] { action.getMenuText() },
-			ImageManager.IMPORT, "F", MenuData.NO_MNEMONIC, "B"));
-		action.setEnabled(true);
-
-		return action;
+					BatchImportDialog.showAndImport(plugin.getTool(), null, files, null,
+						FSBUtils.getProgramManager(plugin.getTool(), false));
+				})
+				.build();
 	}
 
-	private DockingAction createOpenNestedFileSystemAction() {
-		FSBAction action = new FSBAction("Open File System Nested", "Open File System", plugin) {
-			@Override
-			public void actionPerformed(ActionContext context) {
-				FSRL containerFSRL = FSBUtils.getFileFSRLFromContext(context);
-				if (containerFSRL != null && context.getContextObject() instanceof FSBFileNode) {
-					FSBFileNode xfileNode = (FSBFileNode) context.getContextObject();
-					FSBFileNode modelFileNode =
-						(FSBFileNode) gTree.getModelNodeForPath(xfileNode.getTreePath());
-
-					gTree.runTask(monitor -> {
-						try {
-							FileSystemRef fsRef =
-								FileSystemService.getInstance()
-										.probeFileForFilesystem(
-											containerFSRL, monitor,
-											FileSystemProbeConflictResolver.GUI_PICKER);
-							if (fsRef == null) {
-								Msg.showWarn(this, gTree, "No File System Provider",
-									"No file system provider for " + containerFSRL.getName());
-								return;
-							}
-
-							FSBRootNode nestedRootNode = new FSBRootNode(fsRef, modelFileNode);
-							nestedRootNode.setChildren(nestedRootNode.generateChildren(monitor));
-
-							int indexInParent = modelFileNode.getIndexInParent();
-							GTreeNode parent = modelFileNode.getParent();
-							parent.removeNode(modelFileNode);
-							parent.addNode(indexInParent, nestedRootNode);
-							gTree.expandPath(nestedRootNode);
-						}
-						catch (CancelledException | IOException e) {
-							FSUtilities.displayException(this, gTree, "Error Opening FileSystem",
-								e.getMessage(), e);
-						}
-					});
-				}
-			}
-
-			@Override
-			public boolean isAddToPopup(ActionContext context) {
-				return true;
-			}
-
-			@Override
-			public boolean isEnabledForContext(ActionContext context) {
-				FSRL containerFSRL = FSBUtils.getFileFSRLFromContext(context);
-				return !gTree.isBusy() && (containerFSRL != null) &&
-					(context.getContextObject() instanceof FSBFileNode);
-			}
-		};
-		action.setPopupMenuData(new MenuData(new String[] { action.getMenuText() },
-			ImageManager.OPEN_FILE_SYSTEM, "C"));
-		action.setEnabled(true);
-		return action;
+	private DockingAction createClearCachedPasswordsAction() {
+		return new ActionBuilder("FSB Clear Cached Passwords", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(FSBActionContext::notBusy)
+				.popupMenuPath("Clear Cached Passwords")
+				.popupMenuGroup("Z", "B")
+				.description("Clear cached container file passwords")
+				.onAction(
+					ac -> {
+						CachedPasswordProvider ccp =
+							CryptoProviders.getInstance().getCachedCryptoProvider();
+						int preCount = ccp.getCount();
+						ccp.clearCache();
+						Msg.info(this,
+							"Cleared " + (preCount - ccp.getCount()) + " cached passwords.");
+					})
+				.build();
 	}
+
+	private DockingAction createRefreshAction() {
+		return new ActionBuilder("FSB Refresh", plugin.getName())
+				.withContext(FSBActionContext.class)
+				.enabledWhen(ac -> ac.notBusy() && ac.hasSelectedNodes())
+				.popupMenuPath("Refresh")
+				.popupMenuGroup("Z", "Z")
+				.description("Refresh file info")
+				.onAction(
+					ac -> gTree.runTask(monitor -> doRefreshInfo(ac.getSelectedNodes(), monitor)))
+				.build();
+	}
+
 	//----------------------------------------------------------------------------------
 	// end DockingActions
 	//----------------------------------------------------------------------------------
+
+	private void doExtractFile(FSRL fsrl, File outputFile, FSBNode node, TaskMonitor monitor) {
+		if (!ensureFileAccessable(fsrl, node, monitor)) {
+			return;
+		}
+		monitor.setMessage("Exporting...");
+		try (ByteProvider fileBP = fsService.getByteProvider(fsrl, false, monitor)) {
+			long bytesCopied =
+				FSUtilities.copyByteProviderToFile(fileBP, outputFile, monitor);
+			Msg.info(this, "Exported " + fsrl.getName() + " to " + outputFile + ", " +
+				bytesCopied + " bytes copied.");
+		}
+		catch (IOException | CancelledException | UnsupportedOperationException e) {
+			FSUtilities.displayException(this, plugin.getTool().getActiveWindow(),
+				"Error Exporting File", e.getMessage(), e);
+		}
+	}
+
+	/*
+	 * run on gTree task thread
+	 */
+	private void doOpenFileSystem(FSRL containerFSRL, FSBFileNode node, boolean nested,
+			TaskMonitor monitor) {
+		try {
+			if (!ensureFileAccessable(containerFSRL, node, monitor)) {
+				return;
+			}
+
+			monitor.setMessage("Probing " + containerFSRL.getName() + " for filesystems");
+			FileSystemRef ref = fsService.probeFileForFilesystem(containerFSRL, monitor,
+				FileSystemProbeConflictResolver.GUI_PICKER);
+			if (ref == null) {
+				Msg.showWarn(this, plugin.getTool().getActiveWindow(), "Open Filesystem",
+					"No filesystem detected in " + containerFSRL.getName());
+				return;
+			}
+
+			Swing.runLater(() -> {
+				if (nested) {
+					FSBFileNode modelFileNode =
+						(FSBFileNode) gTree.getModelNodeForPath(node.getTreePath());
+
+					FSBRootNode nestedRootNode = new FSBRootNode(ref, modelFileNode);
+					try {
+						nestedRootNode.setChildren(nestedRootNode.generateChildren(monitor));
+					}
+					catch (CancelledException e) {
+						Msg.warn(this, "Failed to populate FSB root node with children");
+					}
+
+					int indexInParent = modelFileNode.getIndexInParent();
+					GTreeNode parent = modelFileNode.getParent();
+					parent.removeNode(modelFileNode);
+					parent.addNode(indexInParent, nestedRootNode);
+					gTree.expandPath(nestedRootNode);
+					provider.contextChanged();
+				}
+				else {
+					plugin.createNewFileSystemBrowser(ref, true);
+				}
+			});
+		}
+		catch (IOException | CancelledException e) {
+			FSUtilities.displayException(this, plugin.getTool().getActiveWindow(),
+				"Open Filesystem",
+				"Error opening filesystem for " + containerFSRL.getName(), e);
+		}
+	}
+
+	private void doViewAsImage(FSRL fsrl, FSBNode node, TaskMonitor monitor) {
+		if (!ensureFileAccessable(fsrl, node, monitor)) {
+			return;
+		}
+
+		Component parent = plugin.getTool().getActiveWindow();
+		try (RefdFile refdFile = fsService.getRefdFile(fsrl, monitor)) {
+
+			Icon icon = GIconProvider.getIconForFile(refdFile.file, monitor);
+			if (icon == null) {
+				Msg.showError(this, parent, "Unable To View Image",
+					"Unable to view " + fsrl.getName() + " as an image.");
+				return;
+			}
+			Swing.runLater(() -> {
+				JLabel label = new GIconLabel(icon);
+				JOptionPane.showMessageDialog(null, label,
+					"Image Viewer: " + fsrl.getName(), JOptionPane.INFORMATION_MESSAGE);
+			});
+		}
+		catch (IOException | CancelledException e) {
+			FSUtilities.displayException(this, parent, "Error Viewing Image File",
+				e.getMessage(), e);
+		}
+	}
+
+	private void doViewAsText(FSRL fsrl, FSBNode node, TaskMonitor monitor) {
+		if (!ensureFileAccessable(fsrl, node, monitor)) {
+			return;
+		}
+
+		Component parent = plugin.getTool().getActiveWindow();
+		try (ByteProvider fileBP = fsService.getByteProvider(fsrl, false, monitor)) {
+
+			if (fileBP.length() > MAX_TEXT_FILE_LEN) {
+				Msg.showInfo(this, parent, "View As Text Failed",
+					"File too large to view as text inside Ghidra. " +
+						"Please use the \"EXPORT\" action.");
+				return;
+			}
+			if (fileBP.length() == 0) {
+				Msg.showInfo(this, parent, "View As Text Failed",
+					"File " + fsrl.getName() + " is empty (0 bytes).");
+				return;
+			}
+			try {
+				// textEditorService closes the inputStream, and must be
+				// called on the swing thread or you get concurrentmodification
+				// exceptions.
+				ByteArrayInputStream bais =
+					new ByteArrayInputStream(fileBP.readBytes(0, fileBP.length()));
+				Swing.runLater(() -> textEditorService.edit(fsrl.getName(), bais));
+			}
+			catch (IOException e) {
+				Msg.showError(this, parent, "View As Text Failed",
+					"Error when trying to view text file " + fsrl.getName(), e);
+			}
+		}
+		catch (IOException | CancelledException e) {
+			FSUtilities.displayException(this, parent, "Error Viewing Text File",
+				e.getMessage(), e);
+		}
+	}
+
+	void doRefreshInfo(List<FSBNode> nodes, TaskMonitor monitor) {
+		Set<FSBRootNode> rootNodes = new HashSet<>();
+		for (FSBNode node : nodes) {
+			if (node instanceof FSBFileNode) {
+				// for each file node, if it's password attr info is out of date, build a unique
+				// list of the containing root nodes that will later be used to refresh the
+				// entire FS
+				if (((FSBFileNode) node).needsFileAttributesUpdate(monitor)) {
+					rootNodes.add(node.getFSBRootNode());
+				}
+			}
+			else if (node instanceof FSBDirNode) {
+				// if the user selected a dir node, force the FS to be refreshed
+				rootNodes.add(node.getFSBRootNode());
+			}
+			else if (node instanceof FSBRootNode) {
+				rootNodes.add((FSBRootNode) node);
+			}
+		}
+		try {
+			for (FSBRootNode rootNode : rootNodes) {
+				rootNode.updateFileAttributes(monitor);
+			}
+			gTree.refilterLater();	// force the changed modelNodes to be recloned and displayed (if filter active)
+		}
+		catch (CancelledException e) {
+			// stop
+		}
+		Swing.runLater(() -> gTree.repaint());
+	}
+
+	private boolean ensureFileAccessable(FSRL fsrl, FSBNode node, TaskMonitor monitor) {
+
+		FSBFileNode fileNode = (node instanceof FSBFileNode) ? (FSBFileNode) node : null;
+
+		monitor.initialize(0);
+		monitor.setMessage("Testing file access");
+		boolean wasMissingPasword = (fileNode != null) ? fileNode.hasMissingPassword() : false;
+		try (ByteProvider bp = fsService.getByteProvider(fsrl, false, monitor)) {
+			// if we can get here and it used to have a missing password, update the node's status
+			if (fileNode != null && wasMissingPasword) {
+				doRefreshInfo(List.of(fileNode), monitor);
+			}
+			return true;
+		}
+		catch (CryptoException e) {
+			Msg.showWarn(this, gTree, "Crypto / Password Error",
+				"Unable to access the specified file.\n" +
+					"This could be caused by not entering the correct password or because of missing crypto information.\n\n" +
+					e.getMessage());
+			return false;
+		}
+		catch (IOException e) {
+			Msg.showError(this, gTree, "File IO Error",
+				"Unable to access the specified file.\n\n" + e.getMessage(), e);
+			return false;
+		}
+		catch (CancelledException e) {
+			return false;
+		}
+
+	}
+
+	//---------------------------------------------------------------------------------------------
+	// static lookup tables for rendering file attributes
+	//---------------------------------------------------------------------------------------------
+	private static final Function<Object, String> PLAIN_TOSTRING = o -> o.toString();
+	private static final Function<Object, String> SIZE_TOSTRING = o -> (o instanceof Long)
+			? FSUtilities.formatSize((Long) o)
+			: o.toString();
+	private static final Function<Object, String> UNIX_ACL_TOSTRING = o -> (o instanceof Number)
+			? String.format("%05o", (Number) o)
+			: o.toString();
+	private static final Function<Object, String> DATE_TOSTRING = o -> (o instanceof Date)
+			? FSUtilities.formatFSTimestamp((Date) o)
+			: o.toString();
+	private static final Function<Object, String> FSRL_TOSTRING = o -> (o instanceof FSRL)
+			? ((FSRL) o).toPrettyString().replace("|", "|\n\t")
+			: o.toString();
+
+	private static final Map<FileAttributeType, Function<Object, String>> FAT_TOSTRING_FUNCS =
+		Map.ofEntries(
+			entry(FSRL_ATTR, FSRL_TOSTRING),
+			entry(SIZE_ATTR, SIZE_TOSTRING),
+			entry(COMPRESSED_SIZE_ATTR, SIZE_TOSTRING),
+			entry(CREATE_DATE_ATTR, DATE_TOSTRING),
+			entry(MODIFIED_DATE_ATTR, DATE_TOSTRING),
+			entry(ACCESSED_DATE_ATTR, DATE_TOSTRING),
+			entry(UNIX_ACL_ATTR, UNIX_ACL_TOSTRING));
+
+	/**
+	 * Shows a dialog with information about the specified file.
+	 *
+	 * @param fsrl {@link FSRL} of the file to display info about.
+	 * @param monitor {@link TaskMonitor} to monitor and update when accessing the filesystems.
+	 */
+	private void showInfoForFile(FSRL fsrl, TaskMonitor monitor) {
+		if (fsrl == null) {
+			Msg.showError(this, null, "Missing File", "Unable to retrieve information");
+			return;
+		}
+
+		// if looking at the root of a nested file system, also include its parent container
+		List<FSRL> fsrls = (fsrl instanceof FSRLRoot && ((FSRLRoot) fsrl).hasContainer())
+				? List.of(((FSRLRoot) fsrl).getContainer(), fsrl)
+				: List.of(fsrl);
+		String title = "Info about " + fsrls.get(0).getName();
+		List<FileAttributes> fattrs = new ArrayList<>();
+		for (FSRL fsrl2 : fsrls) {
+			try {
+				fattrs.add(getAttrsFor(fsrl2, monitor));
+			}
+			catch (IOException e) {
+				Msg.warn(this, "Failed to get info for file " + fsrl2, e);
+			}
+			catch (CancelledException e) {
+				return;
+			}
+		}
+		String html = getHTMLInfoStringForAttributes(fattrs);
+
+		MultiLineMessageDialog.showMessageDialog(plugin.getTool().getActiveWindow(), title, null,
+			html, MultiLineMessageDialog.INFORMATION_MESSAGE);
+	}
+
+	private FileAttributes getAttrsFor(FSRL fsrl, TaskMonitor monitor)
+			throws CancelledException, IOException {
+		try (RefdFile refdFile = fsService.getRefdFile(fsrl, monitor)) {
+			GFileSystem fs = refdFile.fsRef.getFilesystem();
+			GFile file = refdFile.file;
+			FileAttributes fattrs = fs.getFileAttributes(file, monitor);
+			if (fattrs == null) {
+				fattrs = FileAttributes.EMPTY;
+			}
+			fattrs = fattrs.clone();
+			DomainFile associatedDomainFile = ProgramMappingService.getCachedDomainFileFor(fsrl);
+			if (associatedDomainFile != null) {
+				fattrs.add(PROJECT_FILE_ATTR, associatedDomainFile.getPathname());
+			}
+
+			if (!fattrs.contains(NAME_ATTR)) {
+				fattrs.add(NAME_ATTR, file.getName());
+			}
+			if (!fattrs.contains(PATH_ATTR)) {
+				fattrs.add(PATH_ATTR, FilenameUtils.getFullPath(file.getPath()));
+			}
+			if (!fattrs.contains(FSRL_ATTR)) {
+				fattrs.add(FSRL_ATTR, file.getFSRL());
+			}
+			return fattrs;
+		}
+	}
+
+	private String getHTMLInfoStringForAttributes(List<FileAttributes> fileAttributesList) {
+		StringBuilder sb =
+			new StringBuilder("<html>\n<table>\n");
+		sb.append("<tr><th>Property</th><th>Value</th></tr>\n");
+		for (FileAttributes fattrs : fileAttributesList) {
+			if (fattrs != fileAttributesList.get(0)) {
+				// not first element, put a visual divider line
+				sb.append("<tr><td colspan=2><hr></td></tr>");
+			}
+			List<FileAttribute<?>> sortedAttribs = fattrs.getAttributes();
+			Collections.sort(sortedAttribs,
+				(o1, o2) -> Integer.compare(o1.getAttributeType().ordinal(),
+					o2.getAttributeType().ordinal()));
+
+			FileAttributeTypeGroup group = null;
+			for (FileAttribute<?> attr : sortedAttribs) {
+				if (attr.getAttributeType().getGroup() != group) {
+					group = attr.getAttributeType().getGroup();
+					if (group != FileAttributeTypeGroup.GENERAL_INFO) {
+						sb
+								.append("<tr><td><b>")
+								.append(group.getDescriptiveName())
+								.append("</b></td><td><hr></td></tr>\n");
+					}
+				}
+				String valStr =
+					FAT_TOSTRING_FUNCS.getOrDefault(attr.getAttributeType(), PLAIN_TOSTRING)
+							.apply(attr.getAttributeValue());
+
+				String html = HTMLUtilities.escapeHTML(valStr);
+				html = html.replace("\n", "<br>\n");
+				sb
+						.append("<tr><td>")
+						.append(attr.getAttributeDisplayName())
+						.append(":</td><td>")
+						.append(html)
+						.append("</td></tr>\n");
+			}
+		}
+		sb.append("</table>");
+		return sb.toString();
+	}
 
 }
